fix lwip2 builder makefile

--- a/tools/sdk/lwip2/Makefile
+++ b/tools/sdk/lwip2/Makefile
@@ -1,8 +1,6 @@
 
-all: install
-
-%: builder
+all install clean: builder/Makefile.arduino
 	make -C builder -f Makefile.arduino $@
 
-builder:
+builder/Makefile.arduino:
 	git submodule update --init --recursive builder
