lwip2: automatically clone lwip's git

--- a/tools/sdk/lwip2/Makefile
+++ b/tools/sdk/lwip2/Makefile
@@ -1,6 +1,6 @@
 
-all install clean: builder/Makefile.arduino
+all install clean: builder/lwip2-src/README
 	make -C builder -f Makefile.arduino $@
 
-builder/Makefile.arduino:
+builder/lwip2-src/README:
 	git submodule update --init --recursive builder
