--- a/libraries/GDBStub-source-level-debug/library.properties
+++ b/libraries/GDBStub-source-level-debug/library.properties
@@ -1,1 +1,6 @@
-
+name=GDBStubversion=0.x
+author=FredKuijper
+maintainer=Fred Kuijper  
+sentence=GDB server stub by Espressif/VisualGDB
+paragraph=GDB server stub helps debug source level debug via the serial port.
+category=Uncategorizedurl=https://github.com/espressif/esp-gdbstubarchitectures=esp8266
