--- a/libraries/GDBStub-source-level-debug/library.properties
+++ b/libraries/GDBStub-source-level-debug/library.properties
@@ -3,4 +3,5 @@ author=FredKuijper
 maintainer=Fred Kuijper  
 sentence=GDB server stub by Espressif/VisualGDB
 paragraph=GDB server stub helps debug source level debug via the serial port.
-category=Uncategorizedurl=https://github.com/espressif/esp-gdbstubarchitectures=esp8266
+category=Uncategorized
+url=https://github.com/espressif/esp-gdbstubarchitectures=esp8266
