--- a/libraries/GDBStub-source-level-debug/library.properties
+++ b/libraries/GDBStub-source-level-debug/library.properties
@@ -4,4 +4,5 @@ maintainer=Fred Kuijper
 sentence=GDB server stub by Espressif/VisualGDB
 paragraph=GDB server stub helps debug source level debug via the serial port.
 category=Uncategorized
-url=https://github.com/espressif/esp-gdbstubarchitectures=esp8266
+url=https://github.com/espressif/esp-gdbstub
+architectures=esp8266
