--- a/libraries/GDBStub-source-level-debug/library.properties
+++ b/libraries/GDBStub-source-level-debug/library.properties
@@ -1,4 +1,5 @@
-name=GDBStubversion=0
+name=GDBStub
+version=0
 author=FredKuijper
 maintainer=Fred Kuijper  
 sentence=GDB server stub by Espressif/VisualGDB
