--- a/libraries/GDBStub-source-level-debug/library.properties
+++ b/libraries/GDBStub-source-level-debug/library.properties
@@ -1,6 +1,6 @@
 name=GDBStub
 version=0
-author=FredKuijper
+author=ESPRESSIF/VisualGDB
 maintainer=Fred Kuijper  
 sentence=GDB server stub by Espressif/VisualGDB
 paragraph=GDB server stub helps debug source level debug via the serial port.
