--- a/libraries/ESP8266WiFiMesh/library.properties
+++ b/libraries/ESP8266WiFiMesh/library.properties
@@ -1,7 +1,7 @@
 name=ESP8266WiFiMesh
-version=1.0
+version=2.0
 author=Julian Fell
-maintainer=
+maintainer=Anders Löfgren
 sentence=Mesh network library
 paragraph=The library sets up a Mesh Node which acts as a router, creating a Mesh Network with other nodes.
 category=Communication
