Add build_even/odd types to split Arduino tests
Arduino builds are now taking 49 minutes or more, and failing due to
Travis timeouts.

Split the Arduino build task into even and odd half, where each job
will build every other test.  This will reduce any test's runtime
by 50% and speed up checks to avoid the timeout.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ cache:
 matrix:
   include:
     - env:
-      - BUILD_TYPE=build
+      - BUILD_TYPE=build_even
+    - env:
+      - BUILD_TYPE=build_odd
     - env:
       - BUILD_TYPE=platformio
     - env:
