--- a/libraries/ESP8266mDNS/library.properties
+++ b/libraries/ESP8266mDNS/library.properties
@@ -7,3 +7,4 @@ paragraph=This is a simple implementation of multicast DNS query support for an 
 category=Communication
 url=
 architectures=esp8266
+dot_a_linkage=true
